# redis-manager

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.tests  Makefile  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: REDIS_CONNECTION_API_DOCS.md  REDIS_MANAGER_API_DOCS.md  architecture.md  features.md  packaging.md  usage.md  why_redis_manager.md
src/redis_manager/: config.py  prometheus_metrics.py  redis_connection.py  redis_manager.py
testbench/: Dockerfile
testbench/app/: api.py  app.py  requirements.txt
testbench/grafana/config/: grafana.ini
testbench/grafana/dashboards/: redis-manager-dashboard.json
testbench/grafana/provisioning/dashboards/: dashboards.yaml
testbench/prometheus/: prometheus.yml
testbench/redis/: Dockerfile  redis.conf
tests/integration/: Makefile  conftest.py  create_redis_cluster.sh  docker-compose.yml  test_redis_manager.py
tests/unit/: conftest.py  test_redis_connection.py  test_redis_manager.py
